--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,17 @@
 
 body {
-    background-color: gray;
+    background: gray;
 }
-.main-container{
+
+.main-input {
+    background-color: white;
     width: 40%;
-    margin-top: 10%;
+    border-radius: 15px;
+}
+
+ul li {
+    border: 1px solid black;
+    background-color: white;
+    width: 40%;
+    margin: auto;
 }
